fix for video controls getting behind app bar

--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,7 @@ button.hidden {
     display: none;
     transition: opacity 0.3s;
     background: rgba(0, 0, 0, 0.3);
+    padding-top: 3rem;
 }
 
 #videoControls progress {
